--- a/web/client/src/components/Chat/Chat.css
+++ b/web/client/src/components/Chat/Chat.css
@@ -1,38 +1,37 @@
 .outerContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-image:url(../../icons/bgJoin.jpg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  /* background-image:url(../../icons/bgJoin.jpg);
     background-size: 100%;
-    background-position: fix;
+    background-position: fix; */
+  background: #16161a;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: #fffffe;
+  border-radius: 8px;
+  height: 80%;
+  width: 30%;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .outerContainer {
+    height: 100%;
   }
-  
+
   .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background: #FFFFFF;
-    border-radius: 8px;
-    height: 80%;
-    width: 30%;
+    width: 100%;
+    height: 100%;
   }
-  
-  @media (min-width: 320px) and (max-width: 480px) {
-    .outerContainer {
-      height: 100%;
-    }
-  
-    .container {
-      width: 100%;
-      height: 100%;
-      
-    }
+}
+
+@media (min-width: 480px) and (max-width: 1200px) {
+  .container {
+    width: 60%;
   }
-  
-  @media (min-width: 480px) and (max-width: 1200px) {
-    .container {
-      width: 60%;
-    }
-  }
-  
+}
