--- a/web/client/src/components/Input/Input.css
+++ b/web/client/src/components/Input/Input.css
@@ -1,26 +1,28 @@
 .form {
-    display: flex;
-    border-top: 1px solid #D3D3D3;
-  }
-  
-  .input {
-    border: none;
-    border-radius: 10;
-    padding: 2%;
-    width: 80%;
-    font-size: 1em;
-  }
-  
-  input:focus, textarea:focus, select:focus{
-    outline: none;
-  }
-  
-  .sendButton {
-    color: #fff !important;
-    text-decoration: none;
-    background: #2979FF;
-    padding: 18px;
-    display: inline-block;
-    border: none;
-    width: 20%;
-  }
+  display: flex;
+  border-top: 1px solid #d3d3d3;
+}
+
+.input {
+  border: none;
+  border-radius: 10;
+  padding: 2%;
+  width: 80%;
+  font-size: 1em;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+}
+
+.sendButton {
+  color: #fffffe !important;
+  text-decoration: none;
+  background: #7f5af0;
+  padding: 18px;
+  display: inline-block;
+  border: none;
+  width: 20%;
+}
